Interface and content

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,8 +20,8 @@
 </head>
 
 <body>
+	<div id="menu"></div>
 	<div id="app"></div>
-	<div id="logs"></div>
     <script type="module" src="/src/main.ts"></script>
 </body>
 
