--- a/frontend/index.html
+++ b/frontend/index.html
@@ -20,8 +20,10 @@
 </head>
 
 <body>
-	<div id="menu"></div>
-	<div id="app"></div>
+	<div class="root-2-col">
+		<div id="menu"></div>
+		<div id="app"></div>
+	</div>
     <script type="module" src="/src/main.ts"></script>
 </body>
 
